--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
   </style>
 </head>
 <body>
-<input type="search" id="searchInput">
-<button>Search</button>
+
+<input type="search" id="searchInput" placeholder="Image...">
+<button class="search">Search</button>
+
+<div id="result"></div>
+
 
   <script>
+
+const searchInput = document.querySelector("#searchInput");
+const search = document.querySelector(".search");
+const result = document.querySelector("#result");
+
+
+
+
 
   </script>
 </body>
 </html>
+<!-- 
+Access: 3NNxJrdL9DFkFTxOL1q1JlfQn9OHPkVOLUNvSKJvX_s
+
+Secret: wqX5CpsOTpm6muj1ZjTWV-FqKcjIpUFqACAIwzXfWuw -->
