Implement search button functionality
Added event listener for search button click to capture user input.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ const searchInput = document.querySelector("#searchInput");
 const search = document.querySelector(".search");
 const result = document.querySelector("#result");
 
+search.addEventListener("click", function(){
+  const searchValue = searchInput.value; // searchValue is = whatever the user types, for example, Apple.
+
+});
 
 
 
