--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@ search.addEventListener("click", function(){
 
 });
 
+const url = (`https://api.unsplash.com/search/photos?query=${searchTerm}&client_id=${apiKey}`);
+console.log('The url is:', url);
 
 
 
   </script>
 </body>
 </html>
-<!-- 
-Access: 3NNxJrdL9DFkFTxOL1q1JlfQn9OHPkVOLUNvSKJvX_s
 
-Secret: wqX5CpsOTpm6muj1ZjTWV-FqKcjIpUFqACAIwzXfWuw -->
