--- a/index.html
+++ b/index.html
@@ -23,17 +23,32 @@ const searchInput = document.querySelector("#searchInput");
 const search = document.querySelector(".search");
 const result = document.querySelector("#result");
 
+
+const apiKey = '3NNxJrdL9DFkFTxOL1q1JlfQn9OHPkVOLUNvSKJvX_s';
+
+
 search.addEventListener("click", function(){
   const searchValue = searchInput.value; // searchValue is = whatever the user types, for example, Apple.
 
-});
 
-const url = (`https://api.unsplash.com/search/photos?query=${searchTerm}&client_id=${apiKey}`);
+const url = (`https://api.unsplash.com/search/photos?query=${searchValue}&client_id=${apiKey}`);
 console.log('The url is:', url);
 
+
+fetch(url)
+.then(response=>{
+
+  if(response.ok){
+    return response.json()
+  }
+
+  if(!response.ok){
+    
+    throw new Error("Image not found!");
+  }
+})
 
 
   </script>
 </body>
 </html>
-
