--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Search App</title>
 
+  <style> </style>
+  
 </head>
 <body>
 <input type="search" id="searchInput" placeholder="Image...">
@@ -60,6 +62,7 @@ fetch(url)
   </script>
 </body>
 </html>
+
 
 
 
