--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
       background-color: aliceblue;
       height: 100%
     }
-    
+
+    #result{
+
+    }
+
+    #error{
+      
+    }
+
+
+
 
   </style>
 </head>
@@ -100,4 +110,3 @@ fetch(url)
   </script>
 </body>
 </html>
-
