--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
       margin: 0 auto;
     }
 
+    #result img{
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    @media(max-width:768px){
+      #result{
+        grid-template-columns: 1fr;
+      }
+    } /*one column on phones*/
+
 
     #error{
       color: red;
