--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ fetch(url)
     newImage.src = imageUrl;
 
     newImage.addEventListener("click", function(){
-      window.open(fullImageUrl, "blank"); // click on any image to be opened on a new tab
+      window.open(fullImageUrl, "_blank"); // click on any image to be opened on a new tab
     });
 
     result.appendChild(newImage);
