--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       object-fit: cover;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    #result img:hover{
+      transform: scale(1.05);
     }
 
     @media(max-width:768px){
