--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
       color: red;
     }
 
+    .search{
+      background-color: #aedbff;
+      border-radius: 5px;
+      font-size: 12px;
+      margin: 10px;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .search:hover{
+      transform: scale(1.1);
+    }
+
 
 
 
