--- a/index.html
+++ b/index.html
@@ -3,159 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Search App</title>
-
-  <style>
-
-    body{
-      background-color: aliceblue;
-      height: 100%
-    }
-
-    #result{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      padding: 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    #result img{
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-
-    #result img:hover{
-      transform: scale(1.05);
-    }
-
-    @media(max-width:768px){
-      #result{
-        grid-template-columns: 1fr;
-      }
-    } /*one column on phones*/
+  <title>Weather App</title>
 
 
-    #error{
-      color: red;
-    }
-
-    .search{
-      background-color: #aedbff;
-      border-radius: 5px;
-      font-size: 12px;
-      margin: 10px;
-      cursor: pointer;
-      transition: transform 0.3s;
-    }
-
-    .search:hover{
-      transform: scale(1.1);
-    }
-
-
-
-
-  </style>
 </head>
 <body>
 
-<input type="search" id="searchInput" placeholder="Image...">
-<button class="search">Search</button>
 
-<div id="container">
-  <div id="result"></div>
+<div class="container">
+
+  <h2 class="h2">Check Weather</h2>
+
+  <input type="text" id="cityInput"  placeholder ="City...">
+<button class="searchBtn">Search</button>
+
+<div id="result"></div>
+<div id="error" style="display: none;"></div>    
 
 </div>
 
-<div id="error"></div>
-<div class="loader"></div>
-
-  <script>
-
-const searchInput = document.querySelector("#searchInput");
-const search = document.querySelector(".search");
-const result = document.querySelector("#result");
-const loader = document.querySelector(".loader");
-const error = document.querySelector("#error");
-
-
-const apiKey = '3NNxJrdL9DFkFTxOL1q1JlfQn9OHPkVOLUNvSKJvX_s';
-
-
-search.addEventListener("click", function(){
-  const searchValue = searchInput.value; // searchValue is = whatever the user types, for example, Apple.
-
-loader.textContent = "loading....";
-loader.style.display = "block";
-result.innerHTML = "";
-
-const url = (`https://api.unsplash.com/search/photos?query=${searchValue}&client_id=${apiKey}`);
-console.log('The url is:', url);
-
- 
-
-fetch(url)
-.then(response=>{
-
-  if(response.ok){
-    return response.json()
-  }
-
-  if(!response.ok){
-    throw new Error("Image not found!")
-  }
-
-})
-
-
-.then(data=>{
-  console.log(data);
-
-  loader.style.display = "none";
-
-    if(data.results.length === 0){
-    error.textContent = "Image not found!"
-    error.style.display = "block";
-    error.style.color  = "black"
-    return;
-  }
-
-  error.style.display = "none";
-
-  data.results.forEach(photo=>{
-    
-    const imageUrl = photo.urls.small;
-    const fullImageUrl = photo.urls.full;
-    const newImage = document.createElement("img");
-    newImage.src = imageUrl;
-
-    newImage.addEventListener("click", function(){
-      window.open(fullImageUrl, "_blank"); // click on any image to be opened on a new tab
-    });
-
-    result.appendChild(newImage);
-
-  });
-
-})
-
-
-.catch(error=>{
-  console.log(error)
-  loader.style.display = "none"; // loader disappears
-});
-
-
-});
-
-
-  </script>
+<script src="script.js"></script>
 </body>
 </html>
